# mykafka

./: .gitignore  CMakeLists.txt  Makefile  README  TODO  install-deps.sh  launch_multiple.sh
demo/: ctl-orders.sh  delete-partition-while-read.sh  demo.sh  many-producer-many-consumers-many-partitions.sh  many-producer-many-consumers-one-partition.sh  one-producer-many-consumers.sh  partition-size.sh  segment-ttl.sh  simple-producer-consumer.sh  utils.sh
doc/: Doxyfile
protos/: mykafka.proto
src/: ClientHelpers.hh  boost_test_helper.hh  client.cc  main-consumer.cc  main-ctl.cc  main-producer.cc  main-server.cc  producer.cc  server.cc
src/broker/: Broker.cc  Broker.hh  Broker_Bench.cc  Broker_Test.cc
src/commitlog/: CommitLog_Bench.cc  Index.cc  Index.hh  Index_Test.cc  Partition.cc  Partition.hh  Partition_Test.cc  Segment.cc  Segment.hh  Segment_Test.cc  Utils.cc  Utils.hh
src/network/: BrokerInfoService.cc  BrokerInfoService.hh  BrokerServer.cc  BrokerServer.hh  Client.cc  Client.hh  CreatePartitionService.cc  CreatePartitionService.hh  DeletePartitionService.cc  DeletePartitionService.hh  DeleteTopicService.cc  DeleteTopicService.hh  GetMessageService.cc  GetMessageService.hh  GetOffsetsService.cc  GetOffsetsService.hh  RpcServer.cc  RpcServer.hh  RpcService.cc  RpcService.hh  SendMessageService.cc  SendMessageService.hh  Server.cc  Server.hh  Service.cc  Service.hh
src/utils/: ConfigManager.cc  ConfigManager.hh  ConfigManager_Test.cc  Utils.cc  Utils.hh
